# industry-classification-for-jetpack

./: README.md
dataset/: 99 - WAM Domain Industry Data Exploration.ipynb  LABEL_824_DF.csv  LABEL_825_DF.csv  WAM_Domain_Industry_Data_Exploration_by_Fan.ipynb  build_training_dataset.ipynb  build_training_dataset_v2.ipynb  df_tree_export_categories_parents.csv  query.sql  query1_results.csv  query_v2.sql
model_training/distilBERT/: Dockerfile  README.md  main.py  main_v2.py  train.py
model_training/utils_local/: bash_gdmlml  git_command
model_training/utils_poetry_and_cerbo_core/: model.yaml  pyproject.toml
